chore: fixed errors in privacy page and made bottom header visible on mobile and tab screens

--- a/src/components/InternalFooter/internalFooter.module.css
+++ b/src/components/InternalFooter/internalFooter.module.css
@@ -22,6 +22,10 @@
 }
 
 @media only screen and (max-width: 500px) {
+	.footerContainer {
+		display: block;
+	}
+
 	.footer {
 		width: 100vw;
 		padding: 10px;
